# QTCREATORBUG-27780

./: CMakeLists.txt  ts1.ts
